syntax = "proto3";

package api;

option go_package = "pkg/api";

service ThumbnailService {
  rpc GetThumbnail(ThumbnailRequest) returns (ThumbnailResponse);
}

message ThumbnailRequest {
  string url = 1;
}

message ThumbnailResponse {
  bytes image = 1;
}
